--- a/requirements.txt
+++ b/requirements.txt
@@ -2,18 +2,30 @@ aiohttp==3.9.5
 aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.6.2.post1
+asttokens==3.0.0
 attrs==24.2.0
+beautifulsoup4==4.12.3
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.4.0
 click==8.1.7
 colorama==0.4.6
+comm==0.2.2
+cryptography==44.0.0
 dataclasses-json==0.6.7
+debugpy==1.8.9
+decorator==5.1.1
+Deprecated==1.2.15
+dirtyjson==1.0.8
 distro==1.9.0
 dnspython==2.7.0
 email_validator==2.2.0
+executing==2.1.0
 fastapi==0.115.5
 fastapi-cli==0.0.5
+filetype==1.2.0
 frozenlist==1.5.0
+fsspec==2024.10.0
 greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.7
@@ -21,10 +33,15 @@ httptools==0.6.4
 httpx==0.28.0
 httpx-sse==0.4.0
 idna==3.10
+ipython==8.30.0
+jedi==0.19.2
 Jinja2==3.1.4
 jiter==0.8.0
+joblib==1.4.2
 jsonpatch==1.33
 jsonpointer==3.0.0
+jupyter_client==8.6.3
+jupyter_core==5.7.2
 langchain==0.3.9
 langchain-community==0.3.8
 langchain-core==0.3.21
@@ -32,31 +49,63 @@ langchain-openai==0.2.10
 langchain-pinecone==0.2.0
 langchain-text-splitters==0.3.2
 langsmith==0.1.147
+llama-cloud==0.1.5
+llama-index==0.12.2
+llama-index-agent-openai==0.4.0
+llama-index-cli==0.4.0
+llama-index-core==0.12.2
+llama-index-embeddings-openai==0.3.1
+llama-index-indices-managed-llama-cloud==0.6.3
+llama-index-legacy==0.9.48.post4
+llama-index-llms-openai==0.3.2
+llama-index-multi-modal-llms-openai==0.3.0
+llama-index-program-openai==0.3.1
+llama-index-question-gen-openai==0.3.0
+llama-index-readers-file==0.4.0
+llama-index-readers-llama-parse==0.4.0
+llama-parse==0.5.15
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 marshmallow==3.23.1
+matplotlib-inline==0.1.7
 mdurl==0.1.2
 multidict==6.1.0
 mypy-extensions==1.0.0
+nest-asyncio==1.6.0
+networkx==3.4.2
+nltk==3.9.1
 numpy==1.26.4
 openai==1.55.3
 orjson==3.10.12
 packaging==24.2
+pandas==2.2.3
+parso==0.8.4
+pdfminer==20191125
+pdfminer.six==20240706
+pillow==11.0.0
 pinecone==5.4.1
 pinecone-client==5.0.1
 pinecone-notebooks==0.1.1
 pinecone-plugin-inference==3.0.0
 pinecone-plugin-interface==0.0.7
+platformdirs==4.3.6
+prompt_toolkit==3.0.48
 propcache==0.2.0
-pydantic==2.10.2
+psutil==6.1.0
+pure_eval==0.2.3
+pycparser==2.22
+pycryptodome==3.21.0
+pydantic==2.9.2
 pydantic-settings==2.6.1
-pydantic_core==2.27.1
+pydantic_core==2.23.4
 Pygments==2.18.0
 pypdf==5.1.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.19
+pytz==2024.2
 PyYAML==6.0.2
+pyzmq==26.2.0
 regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
@@ -64,16 +113,24 @@ rich==13.9.4
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
+soupsieve==2.6
 SQLAlchemy==2.0.35
+stack-data==0.6.3
 starlette==0.41.3
-tenacity==9.0.0
+striprtf==0.0.26
+tenacity==8.5.0
 tiktoken==0.8.0
+tornado==6.4.2
 tqdm==4.67.1
+traitlets==5.14.3
 typer==0.14.0
 typing-inspect==0.9.0
 typing_extensions==4.12.2
+tzdata==2024.2
 urllib3==2.2.3
 uvicorn==0.32.1
 watchfiles==1.0.0
+wcwidth==0.2.13
 websockets==14.1
+wrapt==1.17.0
 yarl==1.18.0
